app/src/main/cpp/audio_engine.h

    void setCompressorMix(float mix);
    void setDelayTime(float timeMs);
    void setDelaySyncBPM(bool sync);
    void setDelayBPM(int bpm);
    void setReverbType(int type); // 0=Hall, 1=Plate, 2=Spring
    float* getLooperMix(int* outLength);
    
    // Função para carregar áudio no looper
    void loadLooperFromAudio(const float* audioData, int length);
    // Funcionalidades especiais do looper
    void setLooperReverse(bool enabled);
    void setLooperSpeed(float speed); // 0.5 = metade da velocidade, 2.0 = dobro
    void setLooperPitchShift(float semitones); // -12 a +12 semitons
    void setLooperStutter(bool enabled, float rate); // rate em Hz
    bool isLooperReverseEnabled();
    float getLooperSpeed();
    float getLooperPitchShift();
    bool isLooperStutterEnabled();
    float getLooperStutterRate();
    
    // Funcionalidade de Slicing
    void setLooperSlicingEnabled(bool enabled);
    void setLooperSlicePoints(const int* points, int numPoints);
    void setLooperSliceLength(int length);
    bool isLooperSlicingEnabled();
    int getLooperSliceLength();
    int getLooperNumSlices();
    void setLooperSliceOrder(const int* order, int numSlices);
    void randomizeLooperSlices();
    void reverseLooperSlices();
    
    // Funções de edição do looper
    void cutLooperRegion(float start, float end);
    void applyLooperFadeIn(float start, float end);
    void applyLooperFadeOut(float start, float end);
    
    // === FASE 5: EFEITOS AVANÇADOS PARA LOOPER ===
    
    // Compressão automática para looper
    void setLooperAutoCompression(bool enabled);
    void setLooperCompressionThreshold(float threshold); // dB
    void setLooperCompressionRatio(float ratio);
    void setLooperCompressionAttack(float attack); // ms
    void setLooperCompressionRelease(float release); // ms
    bool isLooperAutoCompressionEnabled();
    float getLooperCompressionThreshold();