flutter_app/lib/engine/bindings.dart


  late final _setCompressorMixPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setCompressorMix',
      );
  late final _setCompressorMix = _setCompressorMixPtr
      .asFunction<void Function(double)>();

  void setDelayTime(double timeMs) {
    return _setDelayTime(timeMs);
  }

  late final _setDelayTimePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>('setDelayTime');
  late final _setDelayTime = _setDelayTimePtr
      .asFunction<void Function(double)>();

  void setDelaySyncBPM(bool sync) {
    return _setDelaySyncBPM(sync);
  }

  late final _setDelaySyncBPMPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setDelaySyncBPM',
      );
  late final _setDelaySyncBPM = _setDelaySyncBPMPtr
      .asFunction<void Function(bool)>();

  void setDelayBPM(int bpm) {
    return _setDelayBPM(bpm);
  }

  late final _setDelayBPMPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('setDelayBPM');
  late final _setDelayBPM = _setDelayBPMPtr.asFunction<void Function(int)>();

  void setReverbType(int type) {
    return _setReverbType(type);
  }

  late final _setReverbTypePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('setReverbType');
  late final _setReverbType = _setReverbTypePtr
      .asFunction<void Function(int)>();

  ffi.Pointer<ffi.Float> getLooperMix(ffi.Pointer<ffi.Int> outLength) {
    return _getLooperMix(outLength);
  }

  late final _getLooperMixPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Float> Function(ffi.Pointer<ffi.Int>)
        >
      >('getLooperMix');
  late final _getLooperMix = _getLooperMixPtr
      .asFunction<ffi.Pointer<ffi.Float> Function(ffi.Pointer<ffi.Int>)>();

  /// Função para carregar áudio no looper
  void loadLooperFromAudio(ffi.Pointer<ffi.Float> audioData, int length) {
    return _loadLooperFromAudio(audioData, length);
  }

  late final _loadLooperFromAudioPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Int)>
      >('loadLooperFromAudio');
  late final _loadLooperFromAudio = _loadLooperFromAudioPtr
      .asFunction<void Function(ffi.Pointer<ffi.Float>, int)>();

  /// Funcionalidades especiais do looper
  void setLooperReverse(bool enabled) {
    return _setLooperReverse(enabled);
  }

  late final _setLooperReversePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperReverse',
      );
  late final _setLooperReverse = _setLooperReversePtr
      .asFunction<void Function(bool)>();

  void setLooperSpeed(double speed) {
    return _setLooperSpeed(speed);
  }

  late final _setLooperSpeedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperSpeed',
      );
  late final _setLooperSpeed = _setLooperSpeedPtr
      .asFunction<void Function(double)>();

  void setLooperPitchShift(double semitones) {
    return _setLooperPitchShift(semitones);
  }

  late final _setLooperPitchShiftPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperPitchShift',
      );
  late final _setLooperPitchShift = _setLooperPitchShiftPtr
      .asFunction<void Function(double)>();

  void setLooperStutter(bool enabled, double rate) {
    return _setLooperStutter(enabled, rate);
  }

  late final _setLooperStutterPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool, ffi.Float)>>(
        'setLooperStutter',
      );
  late final _setLooperStutter = _setLooperStutterPtr
      .asFunction<void Function(bool, double)>();

  bool isLooperReverseEnabled() {
    return _isLooperReverseEnabled();
  }

  late final _isLooperReverseEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperReverseEnabled',
      );
  late final _isLooperReverseEnabled = _isLooperReverseEnabledPtr
      .asFunction<bool Function()>();

  double getLooperSpeed() {
    return _getLooperSpeed();
  }

  late final _getLooperSpeedPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('getLooperSpeed');
  late final _getLooperSpeed = _getLooperSpeedPtr
      .asFunction<double Function()>();

  double getLooperPitchShift() {
    return _getLooperPitchShift();
  }

  late final _getLooperPitchShiftPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('getLooperPitchShift');
  late final _getLooperPitchShift = _getLooperPitchShiftPtr
      .asFunction<double Function()>();

  bool isLooperStutterEnabled() {
    return _isLooperStutterEnabled();
  }

  late final _isLooperStutterEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperStutterEnabled',
      );
  late final _isLooperStutterEnabled = _isLooperStutterEnabledPtr
      .asFunction<bool Function()>();

  double getLooperStutterRate() {
    return _getLooperStutterRate();
  }

  late final _getLooperStutterRatePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('getLooperStutterRate');
  late final _getLooperStutterRate = _getLooperStutterRatePtr
      .asFunction<double Function()>();

  /// Funcionalidade de Slicing
  void setLooperSlicingEnabled(bool enabled) {
    return _setLooperSlicingEnabled(enabled);
  }

  late final _setLooperSlicingEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperSlicingEnabled',
      );
  late final _setLooperSlicingEnabled = _setLooperSlicingEnabledPtr
      .asFunction<void Function(bool)>();

  void setLooperSlicePoints(ffi.Pointer<ffi.Int> points, int numPoints) {
    return _setLooperSlicePoints(points, numPoints);
  }

  late final _setLooperSlicePointsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Int>, ffi.Int)>
      >('setLooperSlicePoints');
  late final _setLooperSlicePoints = _setLooperSlicePointsPtr
      .asFunction<void Function(ffi.Pointer<ffi.Int>, int)>();

  void setLooperSliceLength(int length) {
    return _setLooperSliceLength(length);
  }

  late final _setLooperSliceLengthPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'setLooperSliceLength',
      );
  late final _setLooperSliceLength = _setLooperSliceLengthPtr
      .asFunction<void Function(int)>();

  bool isLooperSlicingEnabled() {
    return _isLooperSlicingEnabled();
  }

  late final _isLooperSlicingEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperSlicingEnabled',
      );
  late final _isLooperSlicingEnabled = _isLooperSlicingEnabledPtr
      .asFunction<bool Function()>();

  int getLooperSliceLength() {
    return _getLooperSliceLength();
  }

  late final _getLooperSliceLengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('getLooperSliceLength');
  late final _getLooperSliceLength = _getLooperSliceLengthPtr
      .asFunction<int Function()>();

  int getLooperNumSlices() {
    return _getLooperNumSlices();
  }

  late final _getLooperNumSlicesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('getLooperNumSlices');
  late final _getLooperNumSlices = _getLooperNumSlicesPtr
      .asFunction<int Function()>();

  void setLooperSliceOrder(ffi.Pointer<ffi.Int> order, int numSlices) {
    return _setLooperSliceOrder(order, numSlices);
  }

  late final _setLooperSliceOrderPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Int>, ffi.Int)>
      >('setLooperSliceOrder');
  late final _setLooperSliceOrder = _setLooperSliceOrderPtr
      .asFunction<void Function(ffi.Pointer<ffi.Int>, int)>();

  void randomizeLooperSlices() {
    return _randomizeLooperSlices();
  }

  late final _randomizeLooperSlicesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('randomizeLooperSlices');
  late final _randomizeLooperSlices = _randomizeLooperSlicesPtr
      .asFunction<void Function()>();

  void reverseLooperSlices() {
    return _reverseLooperSlices();
  }

  late final _reverseLooperSlicesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('reverseLooperSlices');
  late final _reverseLooperSlices = _reverseLooperSlicesPtr
      .asFunction<void Function()>();

  /// Funções de edição do looper
  void cutLooperRegion(double start, double end) {
    return _cutLooperRegion(start, end);
  }

  late final _cutLooperRegionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float, ffi.Float)>>(
        'cutLooperRegion',
      );
  late final _cutLooperRegion = _cutLooperRegionPtr
      .asFunction<void Function(double, double)>();

  void applyLooperFadeIn(double start, double end) {
    return _applyLooperFadeIn(start, end);
  }

  late final _applyLooperFadeInPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float, ffi.Float)>>(
        'applyLooperFadeIn',
      );
  late final _applyLooperFadeIn = _applyLooperFadeInPtr
      .asFunction<void Function(double, double)>();

  void applyLooperFadeOut(double start, double end) {
    return _applyLooperFadeOut(start, end);
  }

  late final _applyLooperFadeOutPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float, ffi.Float)>>(
        'applyLooperFadeOut',
      );
  late final _applyLooperFadeOut = _applyLooperFadeOutPtr
      .asFunction<void Function(double, double)>();

  /// Compressão automática para looper
  void setLooperAutoCompression(bool enabled) {
    return _setLooperAutoCompression(enabled);
  }

  late final _setLooperAutoCompressionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperAutoCompression',
      );
  late final _setLooperAutoCompression = _setLooperAutoCompressionPtr
      .asFunction<void Function(bool)>();

  void setLooperCompressionThreshold(double threshold) {
    return _setLooperCompressionThreshold(threshold);
  }

  late final _setLooperCompressionThresholdPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperCompressionThreshold',
      );
  late final _setLooperCompressionThreshold = _setLooperCompressionThresholdPtr
      .asFunction<void Function(double)>();

  void setLooperCompressionRatio(double ratio) {
    return _setLooperCompressionRatio(ratio);
  }

  late final _setLooperCompressionRatioPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperCompressionRatio',
      );
  late final _setLooperCompressionRatio = _setLooperCompressionRatioPtr
      .asFunction<void Function(double)>();

  void setLooperCompressionAttack(double attack) {
    return _setLooperCompressionAttack(attack);
  }

  late final _setLooperCompressionAttackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperCompressionAttack',
      );
  late final _setLooperCompressionAttack = _setLooperCompressionAttackPtr
      .asFunction<void Function(double)>();

  void setLooperCompressionRelease(double release) {
    return _setLooperCompressionRelease(release);
  }

  late final _setLooperCompressionReleasePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperCompressionRelease',
      );
  late final _setLooperCompressionRelease = _setLooperCompressionReleasePtr
      .asFunction<void Function(double)>();

  bool isLooperAutoCompressionEnabled() {
    return _isLooperAutoCompressionEnabled();
  }

  late final _isLooperAutoCompressionEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperAutoCompressionEnabled',
      );
  late final _isLooperAutoCompressionEnabled =
      _isLooperAutoCompressionEnabledPtr.asFunction<bool Function()>();

  double getLooperCompressionThreshold() {
    return _getLooperCompressionThreshold();
  }

  late final _getLooperCompressionThresholdPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperCompressionThreshold',
      );
  late final _getLooperCompressionThreshold = _getLooperCompressionThresholdPtr
      .asFunction<double Function()>();
